--- a/vanilla_crome/index.html
+++ b/vanilla_crome/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1>This works!</h1>
-    <script src="index.js"></script>
+    <h1 id="title" class="btn">This works!</h1>
+    <script src="basic12_if_else_function2.js"></script>
   </body>
 </html>
