--- a/momento_crome/index.html
+++ b/momento_crome/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Something</title>
+    <meta charset="uft-8" />
     <link rel="stylesheet" href="index.css" />
   </head>
 
@@ -11,6 +12,16 @@
         00:00
       </h1>
     </div>
+    <form class="js-form form">
+      <input type="text" placeholder="what is your name?" />
+    </form>
+    <h4 class="js-greetings greetings"></h4>
+    <form class="js-toDoForm">
+      <input type="text" placeholder="write a to do" />
+    </form>
+    <ul class="js-toDoList"></ul>
     <script src="clock.js"></script>
+    <script src="greeting.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
