--- a/momento_crome/index.html
+++ b/momento_crome/index.html
@@ -7,21 +7,40 @@
   </head>
 
   <body>
+    <!-- clock.js의 const부분 -->
     <div class="js-clock">
       <h1 class="js-title">
         00:00
       </h1>
     </div>
+    <!-- greeting.js의 const부분 -->
     <form class="js-form form">
-      <input type="text" placeholder="what is your name?" />
+      <!-- what is your name?은 greeting.js에서 curretUser가 Null일때 보여줌. -->
+      <input type="text" placeholder="What is your name?" />
     </form>
     <h4 class="js-greetings greetings"></h4>
+    <!-- /todo.js의 const 부분 -->
     <form class="js-toDoForm">
       <input type="text" placeholder="write a to do" />
     </form>
     <ul class="js-toDoList"></ul>
+
+    <span class="js-weather"></span>
+
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
+    <script src="background.js"></script>
+    <script src="weather.js"></script>
   </body>
 </html>
+
+<!-- ! form태그란?
+<form> 태그는 웹 페이지에서의 입력 양식을 의미하는데 로그인 창이나, 회원가입 폼 등이 이에 해당된다.
+텍스트 필드에 글자를 입력하거나 체크박스나 라디오 버튼을 클릭하고 제출 버튼을 누르면 백엔드 서버에 양식이 전달되어 정보를 처리하게 된다.
+폼 태그 속성에는 name, action, method, target 등이 있습니다. 폼 속성을 이용하여 전송할 때 어디로 보내야 하는지 그리고 어떤 방법으로 보낼지 정하게된다. (폼 태그 속성은 아래 참조.)
+1) action : 폼을 전송할 서버 쪽 스크립트 파일을 지정합니다.
+2) name : 폼을 식별하기 위한 이름을 지정합니다.
+3) accept-charset : 폼 전송에 사용할 문자 인코딩을 지정합니다.
+4) target : action에서 지정한 스크립트 파일을 현재 창이 아닌 다른 위치에 열도록 지정합니다.
+5) method : 폼을 서버에 전송할 http 메소드를 정합니다. (GET 또는 POST) -->
