--- a/vanilla_crome/index.html
+++ b/vanilla_crome/index.html
@@ -7,6 +7,6 @@
 
   <body>
     <h1 id="title" class="btn">This works!</h1>
-    <script src="basic12_if_else_function2.js"></script>
+    <script src="wificode.js"></script>
   </body>
 </html>
