--- a/momento_crome/index.html
+++ b/momento_crome/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Something</title>
+    <title>Crome Momentum Extension</title>
     <meta charset="uft-8" />
     <link rel="stylesheet" href="index.css" />
   </head>
