--- a/vanilla_crome/day2/index.html
+++ b/vanilla_crome/day2/index.html
@@ -11,3 +11,19 @@
     <script src="src/index.js"></script>
   </body>
 </html>
+
+<!-- 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
+  </head>
+
+  <body class="mediumScreen">
+    <h2>Hello!</h2>
+
+    <script src="src/index.js"></script>
+  </body>
+</html>
+-->
