day4_country_localstorage에 선택한option값 새로고침해도 저장시키기

--- a/vanilla_crome/day4/index_day4.html
+++ b/vanilla_crome/day4/index_day4.html
@@ -3,6 +3,7 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src/style_day4.css" />
   </head>
   <body>
     <!--
@@ -16,14 +17,14 @@
     -->
     <h1>Where are you from?</h1>
     <div class="list">
-    <select class="setting-country" name="setting-country">
-      <option value="COUNTRY">--- Choose Your Country ---</option>
-      <option value="KOREA">Korea</option>
-      <option value="GREECE">Greece</option>
-      <option value="TURKEY">Turkey</option>
-      <option value="FINLAND">Finland</option>
-    </select>
-    <div>
+      <select class="setting-country" name="setting-country">
+        <option value="COUNTRY">--- Choose Your Country ---</option>
+        <option value="KOREA">Korea</option>
+        <option value="GREECE">Greece</option>
+        <option value="TURKEY">Turkey</option>
+        <option value="FINLAND">Finland</option>
+      </select>
+    </div>
     <div class="result"></div>
 
     <script src="src/js_day4.js"></script>
