--- a/practice_javascript_30days/day2_js_clock/index.html
+++ b/practice_javascript_30days/day2_js_clock/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Day2 Analog Clock</title>
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
   </head>
   <body>
-    <script scr="day1.js"></script>
+    <h1>00:00:00</h1>
+    <div class="clock">
+      <div class="clock-face">
+        <div class="hand hour-hand"></div>
+        <div class="hand min-hand"></div>
+        <div class="hand second-hand"></div>
+      </div>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
