--- a/painting_tool/index.html
+++ b/painting_tool/index.html
@@ -7,6 +7,86 @@
     <title>Painting Tool JS</title>
   </head>
   <body>
+    <h1 class="title">Painting tools</h1>
+    <!-- id는 javascipt에서 사용하고 class는 css에서 사용. -->
+    <canvas id="jsCanvas" class="canvas" width="700" height="450"></canvas>
+
+    <div class="controls" id="jsColors">
+      <div class="controls__range">
+        <input
+          type="range"
+          id="jsRange"
+          min="0.1"
+          max="5.0"
+          value="2.5"
+          step="0.1"
+        />
+      </div>
+
+      <div class="controls__btns">
+        <button id="jsMode">Fill</button>
+        <button id="jsSave">Save</button>
+      </div>
+
+      <div class="controls__colors" id="jsColors">
+        <div
+          class="controls__color jsColor"
+          style="background-color: #2c2c2c"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: white"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: pink"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #ff3091"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #ff3b30"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #ff9500"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #6d4000"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #ffcc00"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #4cd963"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #008116"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #5ac8fa"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #0579ff"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #5856d6"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #25014e"
+        ></div>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
