--- a/JS-Basic/DoIt-js-basic-book-master/02/greeting.html
+++ b/JS-Basic/DoIt-js-basic-book-master/02/greeting.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,23 @@
 	<title>Welcome</title>
 	<style>
 		body {
-			font-size:1.3em;
+			font-size: 1.3em;
 			text-align: center;
 		}
 	</style>
 </head>
+
 <body>
-	<h1>어서오세요</h1>	
+	<h1>어서오세요</h1>
+	<script>
+		let name = prompt("이름을 입력해주세요.", "ex)감자");
+		document.write(`<b><big> ${name} </big>님, 환영합니다.</b>`);
+
+		let age = prompt("나이를 입력해주세요", "ex)20");
+		document.write(`<br><b>${name}님이 입력하신 나이는 <big>${age}세</big> 입니다. <br><br>감사합니다 </b>`)
+
+		console.log(name + age)
+	</script>
 </body>
+
 </html>
