--- a/JS-Basic/DoIt-js-basic-book-master/02/quiz-1.html
+++ b/JS-Basic/DoIt-js-basic-book-master/02/quiz-1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,14 @@
 	<title>연습문제-1</title>
 	<style>
 		body {
-			font-size:1.3em;
+			font-size: 1.3em;
 			text-align: center;
 		}
 	</style>
 </head>
-<body>
-</body>
-</html>
 
+<body>
+	<script src="js/welcome.js"></script>
+</body>
+
+</html>
