--- a/JS-Basic/DoIt-js-basic-book-master/02/quiz-2.html
+++ b/JS-Basic/DoIt-js-basic-book-master/02/quiz-2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,21 @@
 	<title>연습문제-2</title>
 	<style>
 		body {
-			text-align: center;
-			font-size:1.2em;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 100%;
+			height: 100vh;
+			font-size: 1.2em;
 		}
 	</style>
 </head>
+
 <body>
 	<!-- 화면에 "Hello, Javascript!" 표시하기 -->
-
+	<script>
+		document.write(`<h1>Hello, Javascript!</h1>`)
+	</script>
 </body>
-</html>
 
+</html>
