--- a/JS-Basic/DoIt-js-basic-book-master/03/quiz-2.html
+++ b/JS-Basic/DoIt-js-basic-book-master/03/quiz-2.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>사각형 너비 구하기</title>
+	<title>사각형 넓이 구하기</title>
 </head>
-<body>	
 
+<body>
+	<script>
+		const width = prompt("사각형의 가로 값을 입력해주세요", "ex)40");
+		const height = prompt("사각형의 세로 값을 입력해주세요", "ex)50");
+		const calculation = width * height
+		alert(`사각형의 넓이는 "${calculation}" 입니다.`)
+	</script>
 </body>
+
 </html>
