--- a/JS-Basic/DoIt-js-basic-book-master/03/quiz-1.html
+++ b/JS-Basic/DoIt-js-basic-book-master/03/quiz-1.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>웹 브라우저 창에 표시하기</title>
 </head>
-<body>	
 
+<body>
+	<script>
+		const quizOne = prompt("화면에 입력할 내용을 작성해주세요", "ex)javascript");
+		document.write(`입력하신 내용은 "${quizOne}" 입니다.`)
+	</script>
 </body>
+
 </html>
