--- a/JS-Basic/DoIt-js-basic-book-master/04/gugudan.html
+++ b/JS-Basic/DoIt-js-basic-book-master/04/gugudan.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,19 @@
 	<title>구구단 - for문</title>
 	<link rel="stylesheet" href="css/gugudan.css">
 </head>
+
 <body>
-	<h1>구구단</h1>
+	<h1>for문을 사용한 구구단 만들기</h1>
+	<script>
+		for (let i = 2; i <= 9; i++) {
+			document.write("<div>");
+			document.write(`<h2>${i}단</h2>`);
+			for (let j = 1; j <= 9; j++) {
+				document.write(`${i} x ${j} = ${i*j}<br>`);
+			}
+			document.write("</div>");
+		}
+	</script>
 </body>
+
 </html>
