--- a/JS-Basic/DoIt-js-basic-book-master/04/multi3.html
+++ b/JS-Basic/DoIt-js-basic-book-master/04/multi3.html
@@ -28,6 +28,13 @@
 			//[취소]버튼을 눌렀을 때 실행할 명령
 			alert("입력이 취소되었습니다.");
 		}
+
+		const age = prompt("나이를 입력하세요.");
+
+		if (age < 20) {
+			document.write("당신은 미성년자입니다.");
+		} else {
+			document.write("당신은 성인입니다.");
 	</script>
 </body>
 
