--- a/JS-Basic/DoIt-js-basic-book-master/04/multi3.html
+++ b/JS-Basic/DoIt-js-basic-book-master/04/multi3.html
@@ -29,12 +29,13 @@
 			alert("입력이 취소되었습니다.");
 		}
 
+		/*
 		const age = prompt("나이를 입력하세요.");
 
 		if (age < 20) {
 			document.write("당신은 미성년자입니다.");
 		} else {
-			document.write("당신은 성인입니다.");
+			document.write("당신은 성인입니다."); */
 	</script>
 </body>
 
@@ -50,7 +51,7 @@
 	}
  -->
 
-<!--
+<!-- 
 * If, else문	
 
 If문에서 조건이 true가 되면 그 다음에 오는 else문은 실행하지 않고 넘어간다.
@@ -91,5 +92,4 @@ Ex) const input = prompt("이름을 입력하세요.")
 	}
 	
 	여기서 if (input) 이라는 값을 입력했기 떄문에 truthy가 되고 else에는 값이 들어있지 않기 떄문에 falsy가 된다.
-
  -->
