--- a/JS-Basic/DoIt-js-basic-book-master/04/diy-factorial.html
+++ b/JS-Basic/DoIt-js-basic-book-master/04/diy-factorial.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,20 @@
 	<title>팩토리얼 계산하기</title>
 	<link rel="stylesheet" href="css/factorial.css">
 </head>
+
 <body>
 	<script>
-		var n = prompt("숫자를 입력하세요.", "10");
-		var nFact = 1;
-		var i = 2;
+		let n = prompt("숫자를 입력하세요.", "10");
+		let nFact = 1;
+		let i = 2;
 
-		while(i <= n) {
-			nFact *= i;
+		while (i <= n) {
+			nFact = nFact * i;
 			i++;
 		}
 
-		documen.write(n + "!= " + nFact);
+		document.write(`${n}! = ${nFact}`);
 	</script>
 </body>
+
 </html>
