--- a/JS-Basic/DoIt-js-basic-book-master/04/factorial-result.html
+++ b/JS-Basic/DoIt-js-basic-book-master/04/factorial-result.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,28 @@
 	<title>팩토리얼 계산하기</title>
 	<link rel="stylesheet" href="css/factorial.css">
 </head>
+
 <body>
 	<script>
+		/* 
 		var n = prompt("숫자를 입력하세요.");
 		var nFact = 1;
 		var i = 2;
 
-		while(i <= n) {
-			nFact *= i;			
+		while (i <= n) {
+			nFact *= i;
 			i++;
 		}
 
 		document.write(n + "!= " + nFact);
+		*/
+
+		let i = 0;
+		do {
+			document.write("반복조건이 true면 반복합니다. <br>"); //명령 실행
+			i += 1;
+		} while (i < 10) //조건이 false가 되면 반복 종료
 	</script>
 </body>
+
 </html>
