--- a/JS-Basic/DoIt-js-basic-book-master/04/even.html
+++ b/JS-Basic/DoIt-js-basic-book-master/04/even.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,23 @@
 	<title>짝수 더하기</title>
 	<link rel="stylesheet" href="css/even.css">
 </head>
+
 <body>
 	<h1>짝수끼리 더하기</h1>
 	<div id="result"></div>
+	<script>
+		let n = 30;
+		let sum = 0;
 
+		for (let i = 1; i <= n; i++) {
+			if (i % 2 == 1) { // i가 홀수일 경우 실행
+				continue;
+			}
+			// i가 짝수일 경우 실행
+			sum = sum + i;
+			document.write(` ${i} ------ ${sum} <br>`);
+		}
+	</script>
 </body>
+
 </html>
