--- a/JS-Basic/DoIt-js-basic-book-master/04/factorial.html
+++ b/JS-Basic/DoIt-js-basic-book-master/04/factorial.html
@@ -16,9 +16,9 @@
 		let i = 2; // 반복문에 사용할 카운터 변수("1!"은 1이기때문에 2부터 시작.)
 
 		while (i <= n) {
-			nFact = nFact * i; // (nFact *= i)
-			i++
-		} // 따라서 5 입력시 계산 = 5*4)*3)*2)*1
+			nFact = nFact * i; // (nFact *= i) 
+			i++ // 1*2)1*3)1*4)1*5)
+		} // 따라서 5 입력시 계산 = 5*4)*3)*2)
 
 		document.write(`${n}! = ${nFact}`);
 	</script>
