--- a/JS-Basic/DoIt-js-basic-book-master/04/quiz-1.html
+++ b/JS-Basic/DoIt-js-basic-book-master/04/quiz-1.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>짝수일까, 홀수일까</title>
 </head>
+
 <body>
 	<h2>짝수일까, 홀수일까</h2>
 
 	<script>
-	
+		let number = prompt("숫자를 입력해주세요");
+		let n = 2;
+
+		if (number !== null) {
+			if (number % n === 0) {
+				document.write(`입력한 숫자 "${number}" 는 짝수입니다.`);
+			} else if (number % n === 1) {
+				document.write(`입력한 숫자 "${number}" 는 홀수입니다.`);
+			} else {
+				document.write("숫자를 입력해주세요.");
+			}
+		} else {
+			document.write("취소되었습니다.");
+		}
 	</script>
 </body>
+
 </html>
