--- a/JS-Basic/DoIt-js-basic-book-master/04/quiz-2.html
+++ b/JS-Basic/DoIt-js-basic-book-master/04/quiz-2.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>3의 배수 찾기</title>
+	<title>배수 찾기</title>
 	<style>
 		body {
-			font-size:1.2em;
-			text-align:center;
+			font-size: 1.2em;
+			text-align: center;
 		}
 	</style>
 </head>
+
 <body>
 	<h2>3의 배수 찾기</h2>
+	<script>
+		let odd = 0;
+		let even = 0;
+
+		for (i = 1; i <= 100; i++) {
+			if (i % 3 == 0) {
+				odd++
+				document.write(`${i}, `)
+			}
+		}
+		document.write(`<p> 3의 배수의 갯수 : ${odd}</p><br>`);
+		document.write("<h2>2의 배수 찾기</h2>")
+		for (j = 2; j <= 100; j++) {
+			if (j % 2 == 0) {
+				even++
+				document.write(`${j}, `);
+			}
+		}
+		document.write(`<p> 2의 배수의 갯수 : ${even}</p>`);
+	</script>
 </body>
+
 </html>
