--- a/JS-Basic/DoIt-js-basic-book-master/05/add-return.html
+++ b/JS-Basic/DoIt-js-basic-book-master/05/add-return.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,10 @@
 	<title>함수</title>
 	<link rel="stylesheet" href="css/add.css">
 </head>
+
 <body>
 	<button>return문 알아보기</button>
-	
+	<script src="js/add-return.js"></script>
 </body>
+
 </html>
