--- a/momento_chrome/index.html
+++ b/momento_chrome/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Crome Momentum Extension</title>
+    <title>Chrome Momentum Extension</title>
     <meta charset="uft-8" />
     <link rel="stylesheet" href="index.css" />
   </head>
@@ -9,9 +9,7 @@
   <body>
     <!-- clock.js의 const부분 -->
     <div class="js-clock">
-      <h1 class="js-title">
-        00:00
-      </h1>
+      <h1 class="js-title">00:00</h1>
     </div>
     <!-- greeting.js의 const부분 -->
     <form class="js-form form">
