--- a/momento_chrome/index.html
+++ b/momento_chrome/index.html
@@ -4,11 +4,21 @@
     <title>Chrome Momentum Extension</title>
     <meta charset="uft-8" />
     <link rel="stylesheet" href="index.css" />
+    <script
+      src="https://kit.fontawesome.com/4a2f8e6471.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
     <!-- clock.js의 const부분 -->
     <div class="js-clock">
+      <a
+        href="https://github.com/blackswan1989/javascript/tree/master/momento_chrome"
+        class="githubIcon"
+        target="_blank"
+        ><i class="fab fa-github"></i
+      ></a>
       <h1 class="js-title">00:00</h1>
     </div>
     <!-- greeting.js의 const부분 -->
