--- a/JS-Basic/DoIt-js-basic-book-master/06_Object/quiz-2.html
+++ b/JS-Basic/DoIt-js-basic-book-master/06_Object/quiz-2.html
@@ -1,17 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Circle 객체</title>
-	<style>
-		body { text-align: center; font-size:1.2em; line-height: 2em;}
-	</style>
-</head>
-<body>
-	<script>
-		var r = prompt("원의 반지름은? (cm)");
-	
-	</script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Circle 객체</title>
+    <style>
+      body {
+        text-align: center;
+        font-size: 1.2em;
+        line-height: 2em;
+      }
+    </style>
+  </head>
+  <body>
+    <script>
+      // prompt 창에서 반지름 값을 입력받아 변수 r에 저장
+      // 생성자 함수를 사용해 변수 r에 있는 반지름 값을 매개변수로 하는 Circle객체를 만들어라.
+      // Circle 객체 안에 원의 둘레와 원의 넓이를 계산하는 함수도 선언하여라.
+      //! 그리고 Circle 객체의 인스턴스를 만들어 직접 변수 r에 값을 입력했을 때 원의 둘레와 넓이가 계산되도록 해라.
+      let r = prompt("원의 반지름은? (cm)");
+
+      function circle(r) {
+        let round = Math.floor(Math.PI * r * 2); // 2πr이므로 *2 (Math.PI는 원의 둘레와 지름 3.14)
+        let dimensions = Math.floor(r * r * 3.14);
+        document.write(`반지름이 ${r}일 때<br>`);
+        document.write(`원의 둘레 : 약 ${round}cm<br>`);
+        document.write(`원의 넓이 : 약 ${dimensions}cm<sup>2</sup>`);
+      }
+      circle(r);
+    </script>
+  </body>
 </html>
