project : html add error message div

--- a/JS-Basic/DoIt-js-basic-book-master/project/sign-in/index.html
+++ b/JS-Basic/DoIt-js-basic-book-master/project/sign-in/index.html
@@ -36,6 +36,7 @@
               required
             />
           </div>
+          <div class="error messageId"></div>
         </label>
         <label for="userPassword" class="form__label">
           비밀번호
@@ -48,6 +49,7 @@
               required
             />
           </div>
+          <div class="error messagePassword1"></div>
         </label>
         <label for="userPassword2" class="form__label">
           비밀번호 확인
@@ -60,6 +62,7 @@
               required
             />
           </div>
+          <div class="error messagePassword2"></div>
         </label>
         <label for="userBirth" class="form__label">
           생년월일
@@ -101,6 +104,7 @@
             required
           />
         </label>
+        <div class="error messageCheckBox"></div>
         <label for="submit" class="submit--label">
           <input type="submit" name="submit" class="submit__input" />
         </label>
